api-macros/tests/ui/clone_on_json.rs
#[derive(trillium_api::TryFromConn)]
#[api(json, clone)]
struct Bad {
    payload: String,
}

fn main() {}
